--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 Michael_Hanna_(R)esume.Rmd
 v2_Horees.github.io.Rproj
 index.Rmd
+Michael_Hanna_-R-esume.html
+h origin +maste
+DS.jpg
+barcode.JPG
+data_analysis.png
+pics
+resume.css - Shortcut.lnk
